force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>Canonical data centre site record. Single source of truth for all site references across Lead, Opportunity, Quote, Order, Contract, Asset and Inventory. Replaces Operation_Site__c picklists throughout the data model.</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>