force-app/main/default/objects/Site__c/fields/Access_Road_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Road_Details__c</fullName>
    <label>Access &amp; Road Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>