force-app/main/default/objects/Site__c/fields/Assumed_PoE__c.field-meta.xml
<CustomField>
    <fullName>Assumed_PoE__c</fullName>
    <label>Assumed PoE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>