force-app/main/default/objects/Site__c/fields/Attainment_Zone__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Zone__c</fullName>
    <label>Attainment Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>