force-app/main/default/objects/Site__c/fields/Building_Coverage_Ratio_Pct__c.field-meta.xml
<CustomField>
    <fullName>Building_Coverage_Ratio_Pct__c</fullName>
    <label>Building Coverage Ratio (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>