force-app/main/default/objects/Site__c/fields/Building_Height_Limit_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Height_Limit_ft__c</fullName>
    <label>Building Height Limit (feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>