force-app/main/default/objects/Site__c/fields/Capacity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites_Capacity_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>