force-app/main/default/objects/Site__c/fields/Capital_Intensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Capital_Intensity_Score__c</fullName>
    <label>Capital Intensity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>