force-app/main/default/objects/Site__c/fields/Chinese_Customer__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chinese Customer</label>
    <type>Checkbox</type>
</CustomField>