force-app/main/default/objects/Site__c/fields/Climate_Economic_Implications__c.field-meta.xml
<CustomField>
    <fullName>Climate_Economic_Implications__c</fullName>
    <label>Economic Implications of Climate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>