force-app/main/default/objects/Site__c/fields/Climate_Score__c.field-meta.xml
<CustomField>
    <fullName>Climate_Score__c</fullName>
    <label>Climate Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>