force-app/main/default/objects/Site__c/fields/Community_Risk__c.field-meta.xml
<CustomField>
    <fullName>Community_Risk__c</fullName>
    <label>Community Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>