force-app/main/default/objects/Site__c/fields/Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1__c</fullName>
    <label>Competitor 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>