force-app/main/default/objects/Site__c/fields/Competitor_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2__c</fullName>
    <label>Competitor 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>