force-app/main/default/objects/Site__c/fields/Competitor_3__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3__c</fullName>
    <label>Competitor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>