force-app/main/default/objects/Site__c/fields/Construction_CS_Per_IT_MW_USD__c.field-meta.xml
<CustomField>
    <fullName>Construction_CS_Per_IT_MW_USD__c</fullName>
    <label>Construction Costs - C&amp;S per IT MW (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>