force-app/main/default/objects/Site__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SG</fullName>
                <label>SG - Singapore</label>
            </value>
            <value>
                <fullName>HK</fullName>
                <label>HK - Hong Kong</label>
            </value>
            <value>
                <fullName>JP</fullName>
                <label>JP - Japan</label>
            </value>
            <value>
                <fullName>KR</fullName>
                <label>KR - South Korea</label>
            </value>
            <value>
                <fullName>PH</fullName>
                <label>PH - Philippines</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>ID - Indonesia</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>CN - China</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>IN - India</label>
            </value>
            <value>
                <fullName>TH</fullName>
                <label>TH - Thailand</label>
            </value>
            <value>
                <fullName>MY</fullName>
                <label>MY - Malaysia</label>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>