force-app/main/default/objects/Site__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Maps the ISO country code to the full country name used on Opportunity.Operation_Country__c. Used by the Target_Site lookup filter to restrict sites by country.</description>
    <formula>CASE(TEXT(Country__c),
  &quot;JP&quot;, &quot;Japan&quot;,
  &quot;KR&quot;, &quot;Korea&quot;,
  &quot;ID&quot;, &quot;Indonesia&quot;,
  &quot;PH&quot;, &quot;Philippines&quot;,
  &quot;CN&quot;, &quot;China&quot;,
  &quot;IN&quot;, &quot;India&quot;,
  &quot;TH&quot;, &quot;Thailand&quot;,
  &quot;MY&quot;, &quot;Malaysia&quot;,
  &quot;SG&quot;, &quot;Singapore&quot;,
  &quot;HK&quot;, &quot;Hong Kong&quot;,
  TEXT(Country__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>