force-app/main/default/objects/Site__c/fields/Current_Zoning__c.field-meta.xml
<CustomField>
    <fullName>Current_Zoning__c</fullName>
    <label>Current Zoning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>