force-app/main/default/objects/Site__c/fields/Customer_Care_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Care Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>