force-app/main/default/objects/Site__c/fields/Customer_Interest_Indicated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest_Indicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Interest Indicated</label>
    <type>Checkbox</type>
</CustomField>