force-app/main/default/objects/Site__c/fields/Date_of_Pass__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Pass__c</fullName>
    <label>Date of Pass</label>
    <type>Date</type>
</CustomField>