force-app/main/default/objects/Site__c/fields/DE_Entity__c.field-meta.xml
<CustomField>
    <fullName>DE_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The DE subsidiary legal entity for this site. Lookup to Account with RecordType DE_Entity. Drives auto-population of DE Entity on Opportunity, Quote, and BAN.</description>
    <label>DE Subsidiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites_DE_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>