force-app/main/default/objects/Site__c/fields/Dev_Costs_Taxes_Score__c.field-meta.xml
<CustomField>
    <fullName>Dev_Costs_Taxes_Score__c</fullName>
    <label>Development Costs and Taxes Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>