force-app/main/default/objects/Site__c/fields/EBITDA_USD__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_USD__c</fullName>
    <label>EBITDA (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>