force-app/main/default/objects/Site__c/fields/Endangered_Species_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Endangered_Species_Commentary__c</fullName>
    <label>Endangered Species / Habitat Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>