force-app/main/default/objects/Site__c/fields/Enterprise_Presence_Score__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Presence_Score__c</fullName>
    <label>Enterprise Presence Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>