force-app/main/default/objects/Site__c/fields/Environmental_Hazard_Score__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Hazard_Score__c</fullName>
    <label>Environmental Hazard Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>