force-app/main/default/objects/Site__c/fields/Environmental_Hazards__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Hazards__c</fullName>
    <label>Environmental Hazards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>