force-app/main/default/objects/Site__c/fields/Fiber_Communications_Score__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Communications_Score__c</fullName>
    <label>Critical Fiber and Communications Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>