force-app/main/default/objects/Site__c/fields/Fiber_Details__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Details__c</fullName>
    <label>Fiber Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>