force-app/main/default/objects/Site__c/fields/Fiber_Lateral_Build_Months__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Lateral_Build_Months__c</fullName>
    <label>Fiber Lateral Build Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>