force-app/main/default/objects/Site__c/fields/Finance_Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>Finance_Country_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finance Country Manager responsible for credit limit and SBI approvals for this site. Auto-copied to Quote when Target_Site__c is set.</description>
    <label>Finance Country Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites_Finance_Country_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>