force-app/main/default/objects/Site__c/fields/Finance_Country_Queue__c.field-meta.xml
<CustomField>
    <fullName>Finance_Country_Queue__c</fullName>
    <description>Finance Country Queue name from Country_Queue__mdt. Displayed on Quote instead of Finance_Country_Manager__c (person). Approval routing still uses Finance_Country_Manager__c.</description>
    <label>Finance Country Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>