force-app/main/default/objects/Site__c/fields/First_Power_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Power_Availability_Date__c</fullName>
    <label>First Utility Power Availability Date</label>
    <type>Date</type>
</CustomField>