force-app/main/default/objects/Site__c/fields/Floodplain_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Floodplain_Commentary__c</fullName>
    <label>Floodplain Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>