force-app/main/default/objects/Site__c/fields/Floodplain_Impacted_Acres__c.field-meta.xml
<CustomField>
    <fullName>Floodplain_Impacted_Acres__c</fullName>
    <label>Floodplain Impacted Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>