force-app/main/default/objects/Site__c/fields/Floor_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>Floor_Area_sqm__c</fullName>
    <label>Floor Area (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>