force-app/main/default/objects/Site__c/fields/Geotech_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Geotech_Commentary__c</fullName>
    <label>Geotech Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>