force-app/main/default/objects/Site__c/fields/GIS_Id__c.field-meta.xml
<CustomField>
    <fullName>GIS_Id__c</fullName>
    <externalId>true</externalId>
    <label>GIS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>