force-app/main/default/objects/Site__c/fields/Incentives_Score__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Score__c</fullName>
    <label>Incentives Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>