force-app/main/default/objects/Site__c/fields/Infrastructure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Notes__c</fullName>
    <label>Potential Infrastructure Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>