force-app/main/default/objects/Site__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True for sites currently available for quoting and ordering.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>