force-app/main/default/objects/Site__c/fields/IT_Capacity_MW__c.field-meta.xml
<CustomField>
    <fullName>IT_Capacity_MW__c</fullName>
    <label>IT Capacity (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>