force-app/main/default/objects/Site__c/fields/Land_Acquisition_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Land_Acquisition_Pricing__c</fullName>
    <label>Land Acquisition Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>