force-app/main/default/objects/Site__c/fields/Land_Feasibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Land_Feasibility_Score__c</fullName>
    <label>Land Feasibility Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>