force-app/main/default/objects/Site__c/fields/Land_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Land_Price_USD__c</fullName>
    <label>Land Price (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>