force-app/main/default/objects/Site__c/fields/Lease_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_Years__c</fullName>
    <label>Lease Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>