force-app/main/default/objects/Site__c/fields/Local_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_Address__c</fullName>
    <description>Site address in local language/script (e.g. Japanese/Chinese/Korean). Free text.</description>
    <label>Local Address</label>
    <type>TextArea</type>
</CustomField>