force-app/main/default/objects/Site__c/fields/Local_Customers__c.field-meta.xml
<CustomField>
    <fullName>Local_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Customers</label>
    <type>Checkbox</type>
</CustomField>