force-app/main/default/objects/Site__c/fields/Market_Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>Market_Competition_Score__c</fullName>
    <label>Market Competition Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>