force-app/main/default/objects/Site__c/fields/MRC_Per_kW_Per_Month_LC__c.field-meta.xml
<CustomField>
    <fullName>MRC_Per_kW_Per_Month_LC__c</fullName>
    <label>MRC per kW per Month (LC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>