force-app/main/default/objects/Site__c/fields/Natural_Hazard_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Natural_Hazard_Commentary__c</fullName>
    <label>Natural Hazard Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>