force-app/main/default/objects/Site__c/fields/Next_Key_Permit__c.field-meta.xml
<CustomField>
    <fullName>Next_Key_Permit__c</fullName>
    <label>Next Key Permit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>