force-app/main/default/objects/Site__c/fields/Odoo_Metro_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Metro_ID__c</fullName>
    <label>Odoo Metro ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>