force-app/main/default/objects/Site__c/fields/OSG__c.field-meta.xml
<CustomField>
    <fullName>OSG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On-Site Generation available</description>
    <label>OSG</label>
    <type>Checkbox</type>
</CustomField>