force-app/main/default/objects/Site__c/fields/OSG_Capacity_MW__c.field-meta.xml
<CustomField>
    <fullName>OSG_Capacity_MW__c</fullName>
    <label>OSG Capacity (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>