force-app/main/default/objects/Site__c/fields/OSG_Commentary__c.field-meta.xml
<CustomField>
    <fullName>OSG_Commentary__c</fullName>
    <label>OSG Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>