force-app/main/default/objects/Site__c/fields/OSG_Energy_Sources__c.field-meta.xml
<CustomField>
    <fullName>OSG_Energy_Sources__c</fullName>
    <label>OSG Energy Source(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>