force-app/main/default/objects/Site__c/fields/OSG_Equipment__c.field-meta.xml
<CustomField>
    <fullName>OSG_Equipment__c</fullName>
    <label>OSG Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>