force-app/main/default/objects/Site__c/fields/Overall_Site_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Site_Score__c</fullName>
    <label>Overall Site Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>