force-app/main/default/objects/Site__c/fields/Permit_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Completion_Date__c</fullName>
    <label>Permit Completion Date</label>
    <type>Date</type>
</CustomField>