force-app/main/default/objects/Site__c/fields/Platform_Manager__c.field-meta.xml
<CustomField>
    <fullName>Platform_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Platform Manager for this site. Copied onto Quotes (Quote_BeforeSave_SiteManagers) to drive Deal Review approval when Account Type = Platform.</description>
    <inlineHelpText>Platform Manager responsible for this site. Used as the Deal Review approver on Platform-type quotes.</inlineHelpText>
    <label>Platform Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites_Platform_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>