force-app/main/default/objects/Site__c/fields/Power_Available_MV__c.field-meta.xml
<CustomField>
    <fullName>Power_Available_MV__c</fullName>
    <label>Power Available (MV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>