force-app/main/default/objects/Site__c/fields/Power_Density_MW_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Power_Density_MW_Per_Acre__c</fullName>
    <label>Power Density (MW IT/acre)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>