force-app/main/default/objects/Site__c/fields/Power_Generation_Type_Score__c.field-meta.xml
<CustomField>
    <fullName>Power_Generation_Type_Score__c</fullName>
    <label>Power Generation Type Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>