force-app/main/default/objects/Site__c/fields/Power_Ramp_Summary__c.field-meta.xml
<CustomField>
    <fullName>Power_Ramp_Summary__c</fullName>
    <label>Power Ramp Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>