force-app/main/default/objects/Site__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Revenue Cloud pricebook active for this site. Auto-assigned to Quotes and Orders when Target Site is selected.</description>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>