force-app/main/default/objects/Site__c/fields/Primary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Currency__c</fullName>
    <description>ISO currency code for this site (e.g. HKD, JPY, SGD). Used for billing and FX calculations.</description>
    <label>Primary Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>