force-app/main/default/objects/Site__c/fields/Reason_For_Pass__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Pass__c</fullName>
    <label>Reason For Pass</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Power Constraints</fullName>
            </value>
            <value>
                <fullName>Zoning / Permitting</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Environmental Risk</fullName>
            </value>
            <value>
                <fullName>Market Timing</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>