force-app/main/default/objects/Site__c/fields/Reason_To_Pass_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Pass_Comment__c</fullName>
    <label>Reason To Pass Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>