force-app/main/default/objects/Site__c/fields/RFS_Date__c.field-meta.xml
<CustomField>
    <fullName>RFS_Date__c</fullName>
    <label>RFS Date</label>
    <type>Date</type>
</CustomField>