force-app/main/default/objects/Site__c/fields/RFS_Date_Variance__c.field-meta.xml
<CustomField>
    <fullName>RFS_Date_Variance__c</fullName>
    <label>RFS Date Variance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>