force-app/main/default/objects/Site__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <label>Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Hyperscale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>