force-app/main/default/objects/Site__c/fields/Seller_Owner__c.field-meta.xml
<CustomField>
    <fullName>Seller_Owner__c</fullName>
    <label>Seller / Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>