force-app/main/default/objects/Site__c/fields/Sharepoint_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder_Link__c</fullName>
    <label>SharePoint Folder Link</label>
    <type>Url</type>
</CustomField>