force-app/main/default/objects/Site__c/fields/Site_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>Site_Area_sqm__c</fullName>
    <label>Site Area (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>