force-app/main/default/objects/Site__c/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <description>Canonical site identifier (e.g. SG01, HK01). Used in CMT lookups and Odoo integration. Must be unique.</description>
    <externalId>true</externalId>
    <label>Site Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>