force-app/main/default/objects/Site__c/fields/Site_Floor_Area_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Site_Floor_Area_Ratio__c</fullName>
    <label>Site Floor Area Ratio (FAR)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>