force-app/main/default/objects/Site__c/fields/Site_Potential_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Site_Potential_Buildings__c</fullName>
    <label>Site Potential (Number of Buildings)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>