force-app/main/default/objects/Site__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
                <default>true</default>
                <label>Operational</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>