force-app/main/default/objects/Site__c/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <label>Sub-Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>