force-app/main/default/objects/Site__c/fields/Time_To_Market_Score__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Market_Score__c</fullName>
    <label>Time to Market Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>