force-app/main/default/objects/Site__c/fields/Timezone_UTC__c.field-meta.xml
<CustomField>
    <fullName>Timezone_UTC__c</fullName>
    <label>Timezone (UTC)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>