force-app/main/default/objects/Site__c/fields/Title_Type__c.field-meta.xml
<CustomField>
    <fullName>Title_Type__c</fullName>
    <label>Title Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Simple</fullName>
            </value>
            <value>
                <fullName>Ground Lease</fullName>
            </value>
            <value>
                <fullName>Long-Term Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>