force-app/main/default/objects/Site__c/fields/Topography_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Topography_Commentary__c</fullName>
    <label>Topography Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>