force-app/main/default/objects/Site__c/fields/Total_Utility_Power_MW__c.field-meta.xml
<CustomField>
    <fullName>Total_Utility_Power_MW__c</fullName>
    <label>Total Utility Power (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>