force-app/main/default/objects/Site__c/fields/US_Customer__c.field-meta.xml
<CustomField>
    <fullName>US_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Customer</label>
    <type>Checkbox</type>
</CustomField>