force-app/main/default/objects/Site__c/fields/Utility_Cost_Per_kWh__c.field-meta.xml
<CustomField>
    <fullName>Utility_Cost_Per_kWh__c</fullName>
    <label>Utility $/kWh</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>