force-app/main/default/objects/Site__c/fields/Utility_Cost_Score__c.field-meta.xml
<CustomField>
    <fullName>Utility_Cost_Score__c</fullName>
    <label>Utility Cost Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>